--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ lead-text-empty">
 <div class="w3-container">
 <div class="bg-1">
   <div class="container">
-    <h3 class="text-center">Bem vindo ao Portal de Cadastro</h3><br>
+    <h3 class="text-center">Bem Vindo ao Portal de Cadastro</h3><br>
      
      
     <div class="center">
