--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="header-left-logo"><br>
        <table class="table1">
   <tr>
-      <td> &nbsp; &nbsp; <a href="/pt-br" itemprop="url"><img itemprop="logo" typeof="foaf:Image" src="https://totalenergies.com.br/sites/all/themes/custom/totalenergy_theme/logo.png" width="104 px" height="76 px" alt="TotalEnergies Brasil - Go to the home page"></a></td>
-        <td><h2 class="single-color">&nbsp; &nbsp;&nbsp; &nbsp;Transporte - TotalEnergies Brasil</h2> </td> 
+      <td>&nbsp; &nbsp; &nbsp;&nbsp; <a href="/pt-br" itemprop="url"><img itemprop="logo" typeof="foaf:Image" src="https://totalenergies.com.br/sites/all/themes/custom/totalenergy_theme/logo.png" width="104 px" height="76 px" alt="TotalEnergies Brasil - Go to the home page"></a></td>
+        <td><h1 class="single-color">&nbsp; &nbsp;&nbsp; &nbsp;Transportes - TotalEnergies Brasil</h1> </td> 
   </tr>
  
 </table>
