--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ lead-text-empty">
                                               <div class="col-sm-5">
                                                   <div class="thumbnail">
                                                       <br>
-                                                      <a href="https://forms.office.com/e/n8bUxvxz4Y" target="_blank"><img src="./assets/images/cadMoto.png" alt="hsqe" style="width:40%;cursor:zoom-in"></a>
+                                                      <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=3Zmhf9xt9E-d0msAAfKujvjvNCifqnxHu65UYjws7zFUOUszMDFTRTRCQ1Y5R0hNTFQ2VFlFUllNMy4u" target="_blank"><img src="./assets/images/cadMoto.png" alt="hsqe" style="width:40%;cursor:zoom-in"></a>
                                                       <p><strong>Novo Cadastro</strong></p>
 
                                                   </div>
