--- a/index.html
+++ b/index.html
@@ -209,16 +209,14 @@ lead-text-empty">
                               <button onclick="document.getElementById('id001').style.display='block'">
                                   <div class="thumbnail">
                                       <br>
-                                      <a href="https://forms.office.com/e/g7VcYVLspL" target="_blank">
-                                      <img src="./assets/images/cavalo.png" alt="Cadastro de Caminhões"
+                        
+                                      <img src="./assets/images/agendamento.png" alt="Cadastro de Caminhões"
                                            style="width:50%;cursor:zoom-in">
-                                      <p><strong>Cadastro de Caminhões</strong></p>
+                                      <p><strong>Agendamento</strong></p>
                                       <p>
-                                          Cadastro de Novos Veiculos<br>
-                                          Consulta de Situação Cadastral, <br>
-                                          Envio de Documentos.
-                                      </p>
-                                    </a>
+                                     <a href="https://forms.office.com/e/Xm5hNfwjsn" target="_blank">Novos Agendamentos </a><br>
+                                      <a href="https://forms.office.com/e/6Az67sbvJ0" target="_blank">Consulta Agendamentos </a><br>
+                                      </p>                               
                                   </div>
                               </button>
                           </div>
@@ -265,11 +263,11 @@ lead-text-empty">
                               <button onclick="document.getElementById('id002').style.display='block'">
                                   <div class="thumbnail">
                                       <br>
-                                      <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=3Zmhf9xt9E-d0msAAfKujvjvNCifqnxHu65UYjws7zFUOUszMDFTRTRCQ1Y5R0hNTFQ2VFlFUllNMy4u" target="_blank">
+                                      <a href= "404_manutencao.html" target="_blank">
                                       <img src="./assets/images/motorista.png"
                                            style="width:40%;cursor:zoom-in"
                                            alt="Cadastro de Motoristas">
-                                      <br><p><strong>Cadastro de Motoristas</strong></p>
+                                      <br><p><strong>Para o Motoristas</strong></p>
                                       <p>
                                           Cadastro de Novos Motoristas<br>
                                           Consulta de Situação Cadastral, <br>
@@ -323,7 +321,7 @@ lead-text-empty">
                               <button onclick="document.getElementById('id003').style.display='block'">
                                   <div class="thumbnail">
                                       <br>
-                                      <a href="https://forms.office.com/e/DQTESyTibA" target="_blank">
+                                      <a href= "404_manutencao.html" target="_blank">
                                       <img src="./assets/images/tanque.png" alt="Cadastro de Tanques" style="width:50%;cursor:zoom-in">
                                       <p><strong>Cadastro de Tanques</strong></p>
                                       <p>
@@ -395,7 +393,7 @@ lead-text-empty">
                                   <button onclick="document.getElementById('id04').style.display='block'">
                                       <div class="thumbnail">
                                           <br>
-                                          <a href="https://forms.office.com/e/BvVmEL5kzV" target="_blank">
+                                          <a href="404_manutencao.html" target="_blank">
                                               <img src="./assets/images/test.png" alt="Questionario" style="width:50%;cursor:zoom-in" />
                                           
                                           <p><strong>Teste PATROM</strong></p>
