--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ lead-text-empty">
                         
                                       <img src="./assets/images/agendamento.png" alt="Cadastro de Caminhões"
                                            style="width:50%;cursor:zoom-in">
-                                      <p><strong>Agendamento</strong></p>
+                                      <p><strong>Agendamento</strong></p><br>
+					  <p>Carga | Descarga - T1 / T3</p><br>
                                       <p>
                                      <a href="https://forms.office.com/e/Xm5hNfwjsn" target="_blank">Novos Agendamentos </a><br>
                                       <a href="https://forms.office.com/e/6Az67sbvJ0" target="_blank">Consulta Agendamentos </a><br>
